
	* redefined the tree structure of GNU Gama exception classes to
	have a common base class GNU_gama::Exception::base (derived from
	std::exceptions). Removed classes GNU_gama::local::Exception,
	GNU_gama::local::ParserException and
	GNU_gama::local::MatVecException are only typedefs to
	GNU_gama::Exception::string, GNU_gama::Exception::parser and
	GNU_gama::Exception::matvec respectively.

2010-09-27  Jiri Novak  <jiri.novak@petriny.net>

	* a patch by Jiri Novak for xml/gama-local-schema.sql and Gkf2sql
          class to be compatible with Oracle XE 10g, PostgreSQL 8.4,
	  MySQL 5.1.7 (also suggested by Vaclav Petras) and Sqlite3.

2010-09-10  Ales Cepek  <cepek@gnu.org>

	* added a new class Gkf2sql and a new program gama-local-xml2sql
	* added SQL DB schema xml/gama-local-schema.sql

	Tested with sqlite3 3.7.2 and postgresql 8.4.4-2

2010-08-13  Ales Cepek  <cepek@gnu.org>

	* all calls to typeid() replaced by dynamic_cast<>()
	* all CVS $Id: comments deleted
	* directory structure simplified to a single tree
	* namespace GaMaLib renamed to GNU_gama::local
	* source codes scattered around directories local/revision/ and
	  local/linearization/ were joined together into a single file
	  local/observation_local.cpp

1.10 2010-07-23  Ales Cepek  <cepek@gnu.org>

	* According to GNU Coding Standards new release is identified with
	a pair of version numbers (1.10)

	* CVS repository moved to GIT for GNU Gama 1.10

CVS Gama repository imported into git

  $ git cvsimport -d:pserver:anonymous@cvs.sv.gnu.org:/sources/gama  gama

  $ git branch
     gama-1-10
     gama-1-4
     gama-1-8
   * master
     origin

Imported branch origin (the most recent version of the CVS main trunk) was renamed to gama-1-9

  $ git branch -m origin gama-1-9

Branch gama-1-10 merged to master

  $ git merge gama-1-10

and branch gama-1-10 was deleted

  $ git branch -d gama-1-10

Pushing a Newly-Created, Existing, or Converted Git Repository